# loan-prediction

./: README.md  app.py  index.html  main.py  pyproject.toml
models/: random_forest_model.pkl
notebooks/: notebook.ipynb
