[tool.poetry]
name = "loan-prediction"
version = "0.1.0"
description = ""
authors = ["Grainier Perera <grainier.perera@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.4.1.post1"
numpy = "^1.26.4"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
jupyter = "^1.0.0"
python-dotenv = "^1.0.1"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
python-multipart = "^0.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

